# pingpong

./: README.md  setup.sh
PingSystem/: .gitmodules  CMakeLists.txt
PingSystem/config/: config_local.json  config_multi_server.json
PingSystem/scripts/: gen.py
PingSystem/src/: CMakeLists.txt
PingSystem/src/bnode/: CMakeLists.txt
PingSystem/src/bnode/App/: main.cpp
PingSystem/src/bnode/Enclave/: Enclave.config.xml  Enclave.edl  ecall.cpp
PingSystem/src/client/: CMakeLists.txt
PingSystem/src/client/App/: cryptolib.cpp  main.cpp
PingSystem/src/common/: CMakeLists.txt  boomerang.proto  ds.hpp  utils.hpp
PingSystem/src/enode/: CMakeLists.txt
PingSystem/src/enode/App/: main.cpp
PingSystem/src/enode/Enclave/: Enclave.config.xml  Enclave.edl  ecall.cpp  utils_t.h
PongSystem/scripts/: gen.py
PongSystem/src/: CMakeLists.txt
PongSystem/src/client/: CMakeLists.txt
PongSystem/src/client/App/: main.cpp
PongSystem/src/common/: CMakeLists.txt  ds.hpp  pingpong.proto  sgx.hpp
PongSystem/src/enode/: CMakeLists.txt
PongSystem/src/enode/App/: main.cpp
PongSystem/src/enode/Enclave/: Enclave.config.xml  ecall.cpp
SubPongOram/: CMakeLists.txt  rworam.conf  rworam.edl  rworam.key  rworam.pem
SubPongOram/api/: rworam_args.h  rworam_t.c  rworam_t.h
SubPongOram/include/: crypto.h  oht_obl_oblsort_impl.h
SubPongOram/include/experiment/: lib.h
SubPongOram/include/intrinsics/: immintrin.h
SubPongOram/include/oht/: crypto.h  lib.h  tag.h  types.h
SubPongOram/include/oht/obl/: mod.h  obl_primitives.h  obleq_arr.h  oblsort_dispatch.h  par_obl_primitives.h
SubPongOram/include/rworam/: lib.h
SubPongOram/scripts/: edl-gen.sh  sign-enclave.sh
SubPongOram/src/: lib.cpp  oht_crypto.cpp  pkt.h
SubPongOram/src/oht/obl/: par_obl_primitives.cpp
